<resources>
    <string name="app_name">UsSenators</string>
    <string name="title_contacts">Contacts</string>
    <string name="label_address">Address</string>
    <string name="label_office">Office</string>
    <string name="label_name">Name</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_end_day">End Day</string>
    <string name="label_gender">Gender</string>
    <string name="label_sort_name">Sort Name</string>
    <string name="label_website">Website</string>
    <string name="label_phone">Phone</string>
</resources>