<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_screen_background"
    tools:context=".presentation.display.DisplayActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_marginTop="@dimen/small"
            android:id="@+id/view_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/shape_rectangle"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/view_header"
            app:layout_constraintTop_toBottomOf="@+id/view_header">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginBottom="@dimen/xsmall"
                app:cardBackgroundColor="@color/color_card_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/xxlarge"
                        android:paddingTop="@dimen/small"
                        android:gravity="center"
                        android:textColor="@color/color_title"
                        android:textSize="@dimen/caption_title"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Abeer" />

                    <TextView
                        android:id="@+id/textview_link"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/small"
                        android:layout_marginEnd="@dimen/small"
                        android:textColor="@color/color_subtitle_1"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@+id/textview_fullname"
                        tools:text="@string/app_name" />


                    <LinearLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/small"
                        android:textColor="@color/color_subtitle_2"
                        app:layout_constraintTop_toBottomOf="@+id/textview_link">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/color_subtitle_1"
                            android:text="Bio Guide Id"
                            android:textSize="@dimen/caption_subtitle_1"
                            />

                        <include layout="@layout/include_view_divider_vertical" />

                        <TextView
                            android:id="@+id/textview_bio_guide_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/color_subtitle_1"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="@dimen/caption_subtitle_1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="@dimen/small"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/container">

                        <ImageView
                            android:id="@+id/viewholder_profile_overview_facebook"
                            android:layout_width="@dimen/image_medium"
                            android:layout_height="@dimen/image_medium"
                            android:layout_marginEnd="@dimen/small"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/xxsmall"
                            android:src="@drawable/email" />

                        <ImageView
                            android:id="@+id/viewholder_profile_overview_twitter"
                            android:layout_width="@dimen/image_medium"
                            android:layout_height="@dimen/image_medium"
                            android:layout_marginStart="@dimen/small"
                            android:layout_marginEnd="@dimen/small"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/xxsmall"
                            android:src="@drawable/speak" />


                        <ImageView
                            android:id="@+id/viewholder_profile_overview_linkedin"
                            android:layout_width="@dimen/image_medium"
                            android:layout_height="@dimen/image_medium"
                            android:layout_marginStart="@dimen/small"
                            android:layout_marginEnd="@dimen/small"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:padding="@dimen/xxsmall"
                            android:src="@drawable/phone" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <ImageView
            android:id="@+id/imageview_image"
            android:layout_width="@dimen/image_large"
            android:layout_height="@dimen/image_large"
            android:background="@drawable/icon_background_dark"
            android:padding="@dimen/small"
            tools:src="@drawable/ic_republican_logo"
            app:layout_constraintBottom_toTopOf="@+id/layout_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_profile" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/medium"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_profile">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textColor="@color/color_subtitle_2"
                android:textSize="@dimen/caption_subtitle_1" />

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_office"
              />

            <TextView
                android:id="@+id/textview_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_name" />

            <TextView
                android:id="@+id/textview_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_birthday" />

            <TextView
                android:id="@+id/textview_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_end_day" />

            <TextView
                android:id="@+id/textview_enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textColor="@color/color_subtitle_2"
                android:textSize="@dimen/caption_subtitle_1"
                android:text="@string/label_gender" />

            <TextView
                android:id="@+id/textview_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_sort_name" />

            <TextView
                android:id="@+id/textview_sort_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textStyle="bold"
                android:textColor="@color/color_title"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_website" />

            <TextView
                android:id="@+id/textview_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textStyle="bold"
                android:textColor="@color/color_title"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:textSize="@dimen/caption_subtitle_1"
                android:textColor="@color/color_subtitle_2"
                android:text="@string/label_phone" />

            <TextView
                android:id="@+id/textview_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/xxsmall"
                android:paddingBottom="@dimen/xxsmall"
                android:textSize="@dimen/caption_title_2"
                android:textColor="@color/color_title"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/small"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>